--- a/src/main/resources/templates/users/form.html
+++ b/src/main/resources/templates/users/form.html
@@ -3,23 +3,28 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Thymeleaf in action</title>
 </head>
 
 <body>
-<div th:replace="~{fragments/header :: header}"></div>
-<h3 th:text="${userModel.title}">waylau</h3>
+<!--<div th:replace="~{fragments/header :: header}"></div>-->
+<h3 th:text="${userModel.title}">sotowang</h3>
 <form action="/users" th:action="@{/users}" method="POST" th:object="${userModel.user}">
-    <input type="hidden" name="id" th:value="*{id}"> 名称：
+    账号：
+    <input type="text" name="cardid" th:value="*{cardid}">
     <br>
+    姓名：
     <input type="text" name="name" th:value="*{name}">
-    <br> 邮箱：
-    <br>
-    <input type="text" name="email" th:value="*{email}">
+    <br>密码
+    <input type="password" name="password" th:value="*{password}">
+    <br>部门/学院
+    <input type="text" name="department" th:value="*{department}">
+    <br>性别：
+    <input type="text" name="sex" th:value="*{sex}">
     <input type="submit" value="提交">
 </form>
-<div th:replace="~{fragments/footer :: footer}"></div>
+<!--<div th:replace="~{fragments/footer :: footer}"></div>-->
 </body>
 
 </html>
