--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -2,11 +2,11 @@
 <html lang="zh-CN">
 <head>
 	<title>登陆页面</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
+	<link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
+	<link rel="stylesheet" type="text/css" href="../css/util.css"/>
+	<link rel="stylesheet" type="text/css" href="../css/main.css"/>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 	<div class="container-login100">
 		<div class="wrap-login100">
 			<div class="login100-pic js-tilt" data-tilt>
-				<img src="images/img-01.png" alt="IMG">
+				<img src="../images/img-01.png" alt="IMG">
 			</div>
 
 			<form class="login100-form validate-form">
@@ -23,7 +23,7 @@
 				</span>
 
 				<div class="wrap-input100 validate-input">
-					<input class="input100" type="text" name="email" placeholder="邮箱">
+					<input class="input100" type="text" name="email" placeholder="账号">
 					<span class="focus-input100"></span>
 					<span class="symbol-input100">
 						<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -51,7 +51,7 @@
 				</div>
 
 				<div class="text-center p-t-136">
-					<a class="txt2" href="https://www.helloweba.net/" target="_blank">
+					<a class="txt2" href="https://www.baidu.com/" target="_blank">
 							还没有账号？立即注册
 						<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 					</a>
