--- a/src/main/resources/templates/users/view.html
+++ b/src/main/resources/templates/users/view.html
@@ -8,18 +8,18 @@
 </head>
 
 <body>
-<div th:replace="~{fragments/header :: header}"></div>
+<!--<div th:replace="~{fragments/header :: header}"></div>-->
 <h3 th:text="${userModel.title}">waylau</h3>
 <div>
-    <P><strong>ID:</strong><span th:text="${userModel.user.id}"></span></P>
+    <P><strong>ID:</strong><span th:text="${userModel.user.cardid}"></span></P>
     <P><strong>Name:</strong><span th:text="${userModel.user.name}"></span></P>
-    <P><strong>Email:</strong><span th:text="${userModel.user.email}"></span></P>
+    <P><strong>Sex:</strong><span th:text="${userModel.user.sex}"></span></P>
 </div>
 <div>
-    <a th:href="@{'/users/delete/'+${userModel.user.id}}">删除</a>
-    <a th:href="@{'/users/modify/'+${userModel.user.id}}">修改</a>
+    <a th:href="@{'/users/delete/'+${userModel.user.cardid}}">删除</a>
+    <a th:href="@{'/users/modify/'+${userModel.user.cardid}}">修改</a>
 </div>
-<div th:replace="~{fragments/footer :: footer}"></div>
+<!--<div th:replace="~{fragments/footer :: footer}"></div>-->
 </body>
 
 </html>
