--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN"
+      xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    xmlns:sec="hrrp://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
 	<title>登陆页面</title>
 	<meta charset="utf-8"/>
