--- a/src/main/resources/templates/users/form.html
+++ b/src/main/resources/templates/users/form.html
@@ -5,25 +5,64 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Thymeleaf in action</title>
+
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
 </head>
 
 <body>
 <!--<div th:replace="~{fragments/header :: header}"></div>-->
-<h3 th:text="${userModel.title}">sotowang</h3>
-<form action="/users" th:action="@{/users}" method="POST" th:object="${userModel.user}">
-    账号：
-    <input type="text" name="cardid" th:value="*{cardid}">
-    <br>
-    姓名：
-    <input type="text" name="name" th:value="*{name}">
-    <br>密码
-    <input type="password" name="password" th:value="*{password}">
-    <br>部门/学院
-    <input type="text" name="department" th:value="*{department}">
-    <br>性别：
-    <input type="text" name="sex" th:value="*{sex}">
-    <input type="submit" value="提交">
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <form action="/users" th:action="@{/users}" method="POST" th:object="${userModel.user}" role="form">
+                <div class="form-group">
+                    <label>
+                        <h3 th:text="${userModel.title}">sotowang</h3>
+
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label for="cardid">
+                        账号：
+                    </label>
+                    <input type="text" id="cardid" name="cardid" th:value="*{cardid}" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="name">
+                        姓名：
+                    </label>
+                    <input type="text" id="name" name="name" th:value="*{name}" class="form-control">
+
+                </div>
+                <div class="form-group">
+                    <label for="password">
+                        密码
+                    </label>
+                    <input type="password" id="password" name="password" th:value="*{password}" class="form-control">
+
+                </div>
+                <div class="form-group">
+                    <label for="department">
+                        部门/学院
+                    </label>
+                    <input type="text" id="department" name="department" th:value="*{department}" class="form-control">
+
+                </div>
+                <div class="form-group">
+                    <label for="sex">
+                        性别：
+                    </label>
+                    <input type="text" id="sex" name="sex" th:value="*{sex}" class="form-control">
+
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="提交" class="btn btn-primary">
+
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 <!--<div th:replace="~{fragments/footer :: footer}"></div>-->
 </body>
 
