--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -21,7 +21,7 @@
     </tr>
     </thead>
     <tbody>
-    <!--<tr th:if="${userModel.userList.length()} eq 0">-->
+    <!--<tr th:if="${userModel.userList.size()} eq 0">-->
         <!--<td colspan="3">没有用户信息！</td>-->
     <!--</tr>-->
     <tr th:each="user : ${userModel.userList}">
