--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,67 +1,72 @@
 <!DOCTYPE html>
 <html lang="zh-CN"
       xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    xmlns:sec="hrrp://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="hrrp://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-	<title>登陆页面</title>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1"/>
-	<link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
-	<link rel="stylesheet" type="text/css" href="../css/util.css"/>
-	<link rel="stylesheet" type="text/css" href="../css/main.css"/>
+    <title>登陆页面</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/util.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/main.css"/>
 </head>
 
 <body>
 <div class="dowebok">
-	<div class="container-login100">
-		<div class="wrap-login100">
-			<div class="login100-pic js-tilt" data-tilt>
-				<img src="../images/img-01.png" alt="IMG">
-			</div>
+    <div class="container-login100">
+        <div class="wrap-login100">
+            <div class="login100-pic js-tilt" data-tilt>
+                <img src="../images/img-01.png" alt="IMG">
+            </div>
 
-			<form class="login100-form validate-form">
+            <form class="login100-form validate-form" th:action="@{/login}" method="post">
 				<span class="login100-form-title">
 					系统登陆
 				</span>
+                <span>
+                    <div class=" col-md-5" th:if="${loginError}">
+                        <p class="error" th:text="${errorMsg}" ></p>
+                    </div>
+                </span>
 
-				<div class="wrap-input100 validate-input">
-					<input class="input100" type="text" name="email" placeholder="账号">
-					<span class="focus-input100"></span>
-					<span class="symbol-input100">
+                <div class="wrap-input100 validate-input">
+                    <input class="input100" type="text" name="username" placeholder="账号">
+                    <span class="focus-input100"></span>
+                    <span class="symbol-input100">
 						<i class="fa fa-envelope" aria-hidden="true"></i>
 					</span>
-				</div>
+                </div>
 
-				<div class="wrap-input100 validate-input">
-					<input class="input100" type="password" name="pass" placeholder="密码">
-					<span class="focus-input100"></span>
-					<span class="symbol-input100">
+                <div class="wrap-input100 validate-input">
+                    <input class="input100" type="password" name="password" placeholder="密码">
+                    <span class="focus-input100"></span>
+                    <span class="symbol-input100">
 						<i class="fa fa-lock" aria-hidden="true"></i>
 					</span>
-				</div>
-				
-				<div class="container-login100-form-btn">
-					<button class="login100-form-btn">
-						登陆
-					</button>
-				</div>
+                </div>
 
-				<div class="text-center p-t-12">
-					<a class="txt2" href="javascript:">
-						忘记密码？
-					</a>
-				</div>
+                <div class="container-login100-form-btn">
+                    <button type="submit" class="login100-form-btn">
+                        登陆
+                    </button>
+                </div>
 
-				<div class="text-center p-t-136">
-					<a class="txt2" href="https://www.baidu.com/" target="_blank">
-							还没有账号？立即注册
-						<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-					</a>
-				</div>
-			</form>
-		</div>
-	</div>
+                <div class="text-center p-t-12">
+                    <a class="txt2" href="javascript:">
+                        忘记密码？
+                    </a>
+                </div>
+
+                <div class="text-center p-t-136">
+                    <a class="txt2" href="https://www.baidu.com/" target="_blank">
+                        还没有账号？立即注册
+                        <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+                    </a>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 
 </body>
