--- a/src/main/resources/templates/facility/findfacility.html
+++ b/src/main/resources/templates/facility/findfacility.html
@@ -15,7 +15,7 @@
     <title>门禁设置管理</title>
 </head>
 <body>
-<div class="content-wrapper">
+<div class="content-wrapper" class="fixed-nav sticky-footer bg-dark" id="page-top">
     <div class="container-fluid">
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
@@ -45,19 +45,6 @@
                             <th>操作</th>
                         </tr>
                         </thead>
-                        <!--<tfoot>-->
-                        <!--<tr>-->
-                            <!--<th>ID</th>-->
-                            <!--<th>地点</th>-->
-                            <!--<th>开始时间</th>-->
-                            <!--<th>结束时间</th>-->
-                            <!--<th>权限</th>-->
-                            <!--<th>类型</th>-->
-                            <!--<th>状态</th>-->
-                            <!--<th>本机IP</th>-->
-                            <!--<th>服务器IP</th>-->
-                        <!--</tr>-->
-                        <!--</tfoot>-->
                         <tbody>
                         <tr>
                             <td>1</td>
