--- a/src/main/resources/templates/facility/modify.html
+++ b/src/main/resources/templates/facility/modify.html
@@ -4,29 +4,23 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>Thymeleaf in action</title>
+    <title>设备查看</title>
 
-    <!--<link href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" >-->
-    <!--<link href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">-->
-    <!--<link href="../module/css/sb-admin.css" rel="stylesheet" >-->
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/datatables/1.10.19/css/dataTables.bootstrap4.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/startbootstrap-sb-admin@5.0.3/css/sb-admin.css" rel="stylesheet">
-    <!--<link href="https://cdn.bootcss.com/startbootstrap-sb-admin-2/3.3.7+1/css/sb-admin-2.min.css" rel="stylesheet">-->
-    <!--<link href="https://cdn.bootcss.com/datatables/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet">-->
-    <!--<link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet" >-->
-
-
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
+    <!-- Bootstrap core CSS-->
+    <link href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom fonts for this template-->
+    <link href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- Page level plugin CSS-->
+    <link href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+    <!-- Custom styles for this template-->
+    <link href="../module/css/sb-admin.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
 </head>
 
-
-<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+<body  class="fixed-nav sticky-footer bg-dark" id="page-top">
+<!--<div th:replace="~{fragments/header :: header}"></div>-->
 <!-- Navigation-->
-<!--<div th:href="@{../mainframe.html}"> </div>-->
-<!--<h3 th:text="${userModel.title}">用户信息</h3>-->
-<!--<div th:replace="~{/mainframe :: common}"/>-->
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <a class="navbar-brand" href="index.html">门禁管理系统</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -254,99 +248,115 @@
         </ul>
     </div>
 </nav>
+
 <div class="content-wrapper">
     <div class="container-fluid">
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">流水管理</a>
+                <a href="#">门禁设置管理</a>
             </li>
             <li class="breadcrumb-item active">信息查询</li>
         </ol>
-        <!-- Example DataTables Card-->
-        <div class="card mb-3">
-            <div class="card-header">
-                <i class="fa fa-table"></i> Data Table Example</div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-bordered text-center"  id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                        <tr>
-                            <td>账号</td>
-                            <td>姓名</td>
-                            <td>性别</td>
-                            <td>操作</td>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <!--<tr th:if="${userModel.userList.size()} eq 0">-->
-                        <!--<td colspan="3">没有用户信息！</td>-->
-                        <!--</tr>-->
-                        <tr th:each="user : ${userModel.userList}">
-                            <td th:text="${user.cardid}"></td>
-                            <td th:text="${user.name}"></td>
-                            <td th:text="${user.sex}"></td>
-                            <td><a th:href="@{'/users/'+${user.cardid}}" th:text="查看"></a></td>
-                        </tr>
-                        <tr>
-                            <td colspan="3">
-                                <a class="btn btn-primary" href="/users/form.html" th:href="@{/users/form}">创建用户</a>
-                            </td>
-                        </tr>
-
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="card-footer small text-muted" th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy HH:mm')}" >版权保留xjtuse</div>
-        </div>
-    </div>
-    <!-- /.container-fluid-->
-    <!-- /.content-wrapper-->
-    <footer class="sticky-footer">
         <div class="container">
-            <div class="text-center">
-                <small>Copyright © Your Website 2017 / More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></small>
-            </div>
-        </div>
-    </footer>
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fa fa-angle-up"></i>
-    </a>
-    <!-- Logout Modal-->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="login.html">Logout</a>
+            <div class="row">
+                <div class="col-md-8">
+
+                    <form action="/users" th:action="@{/users}" method="POST" th:object="${userModel.user}" role="form">
+                        <div class="form-row align-items-center">
+                            <div class="col-md-12">
+                                <label class="sr-only" for="inlineFormInputGroup1">ID</label>
+                                <div class="input-group mb-2">
+                                    <div class="col-md-2">ID</div>
+                                    <input type="text" name="fid" th:value="*{cardid}" class="form-control" id="inlineFormInputGroup1" placeholder="null">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="sr-only" for="inlineFormInputGroup2">start time</label>
+                                <div class="input-group mb-2 ">
+                                    <div class="col-md-2">开始时间</div>
+                                    <input type="text" name="startTime" th:value="*{cardid}" class="form-control" id="inlineFormInputGroup2" placeholder="null">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="sr-only" for="inlineFormInputGroup3">end time</label>
+                                <div class="input-group mb-2">
+                                    <div class="col-md-2">结束时间</div>
+                                    <input type="text" name="endTime" th:value="*{cardid}" class="form-control" id="inlineFormInputGroup3" placeholder="null">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="sr-only" for="inlineFormInputGroup4">end time</label>
+                                <div class="input-group mb-2">
+                                        <div class="col-md-2">权限</div>
+                                    <input type="text" name="permission" th:value="*{cardid}" class="form-control" id="inlineFormInputGroup4" placeholder="null">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="sr-only" for="inlineFormInputGroup5">end time</label>
+                                <div class="input-group mb-2">
+                                        <div class="col-md-2">地点</div>
+                                    <input type="text" name="locate" th:value="*{cardid}" class="form-control" id="inlineFormInputGroup5" placeholder="null">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="sr-only" for="inlineFormInputGroup6">end time</label>
+                                <div class="input-group mb-2">
+                                        <div class="col-md-2">类型</div>
+                                    <input type="text" name="type" th:value="*{cardid}" class="form-control" id="inlineFormInputGroup6" placeholder="null">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="sr-only" for="inlineFormInputGroup7"end time</label>
+                                <div class="input-group mb-2">
+                                        <div class="col-md-2">状态</div>
+                                    <input type="text" name="status" th:value="*{cardid}" class="form-control" id="inlineFormInputGroup7" placeholder="null">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="sr-only" for="inlineFormInputGroup8">end time</label>
+                                <div class="input-group mb-2">
+                                        <div class="col-md-2">本机ip</div>
+                                    <input type="text" name="ipAddr" th:value="*{cardid}" class="form-control" id="inlineFormInputGroup8" placeholder="null">
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <label class="sr-only" for="inlineFormInputGroup9">end time</label>
+                                <div class="input-group mb-2">
+                                        <div class="col-md-2">服务器</div>
+                                    <input type="text" name="serverIp" th:value="*{cardid}" class="form-control" id="inlineFormInputGroup9" placeholder="null">
+                                </div>
+                            </div>
+
+                            <div class="col-md-12 text-center">
+                                <button type="submit" class="btn btn-primary mb-2">修改</button>
+                                <button type="button" onclick="window.location='/haha'" class="btn btn-primary mb-2">返回</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Bootstrap core JavaScript-->
-    <script src="../module/vendor/jquery/jquery.min.js"></script>
-    <script src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Core plugin JavaScript-->
-    <script src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Page level plugin JavaScript-->
-    <script src="../module/vendor/chart.js/Chart.min.js"></script>
-    <script src="../module/vendor/datatables/jquery.dataTables.js"></script>
-    <script src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
-    <!-- Custom scripts for all pages-->
-    <script src="../module/js/sb-admin.min.js"></script>
-    <!-- Custom scripts for this page-->
-    <script src="../module/js/sb-admin-datatables.min.js"></script>
-    <script src="../module/js/sb-admin-charts.min.js"></script>
 </div>
+<!--<div th:replace="~{fragments/footer :: footer}"></div>-->
+
+<!-- Bootstrap core JavaScript-->
+<script src="../module/vendor/jquery/jquery.min.js"></script>
+<script src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- Core plugin JavaScript-->
+<script src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
+<!-- Page level plugin JavaScript-->
+<script src="../module/vendor/chart.js/Chart.min.js"></script>
+<script src="../module/vendor/datatables/jquery.dataTables.js"></script>
+<script src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
+<!-- Custom scripts for all pages-->
+<script src="../module/js/sb-admin.min.js"></script>
+<!-- Custom scripts for this page-->
+<script src="../module/js/sb-admin-datatables.min.js"></script>
+<!--<script src="../module/js/sb-admin-charts.min.js"></script>-->
+<script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+
 </body>
 
 </html>
