--- a/src/main/resources/templates/users/form.html
+++ b/src/main/resources/templates/users/form.html
@@ -19,7 +19,7 @@
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
 <!--<div th:replace="~{fragments/header :: header}"></div>-->
-<div th:replace="~{./mainframe :: header}"></div>
+<!--<div th:replace="mainframe :: header"></div>-->
 
 <div class="content-wrapper">
     <div class="container-fluid">
