--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -6,16 +6,20 @@
     <meta charset="UTF-8"/>
     <title>Thymeleaf in action</title>
 
-    <!--<link href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" >-->
-    <!--<link href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">-->
     <!--<link href="../module/css/sb-admin.css" rel="stylesheet" >-->
-    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/datatables/1.10.19/css/dataTables.bootstrap4.css" rel="stylesheet">
+    <!--<link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">-->
+    <!--<link href="https://cdn.bootcss.com/datatables/1.10.19/css/dataTables.bootstrap4.css" rel="stylesheet">-->
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/startbootstrap-sb-admin@5.0.3/css/sb-admin.css" rel="stylesheet">
-    <!--<link href="https://cdn.bootcss.com/startbootstrap-sb-admin-2/3.3.7+1/css/sb-admin-2.min.css" rel="stylesheet">-->
-    <!--<link href="https://cdn.bootcss.com/datatables/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet">-->
-    <!--<link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet" >-->
+
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
+    <!-- Bootstrap core CSS-->
+    <link href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom fonts for this template-->
+    <!--<link href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
+    <!-- Page level plugin CSS-->
+    <link href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+    <!-- Custom styles for this template-->
+    <link href="../module/css/sb-admin.css" rel="stylesheet">
 
 
 </head>
@@ -288,14 +292,12 @@
                             <td th:text="${user.sex}"></td>
                             <td><a th:href="@{'/users/'+${user.cardid}}" th:text="查看"></a></td>
                         </tr>
-                        <tr>
-                            <td colspan="3">
-                                <a class="btn btn-primary" href="/users/form.html" th:href="@{/users/form}">创建用户</a>
-                            </td>
-                        </tr>
 
                         </tbody>
                     </table>
+                    <div>
+                        <a class="btn btn-primary" href="/users/form.html" th:href="@{/users/form}">添加用户</a>
+                    </div>
                 </div>
             </div>
             <div class="card-footer small text-muted" th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy HH:mm')}" >版权保留xjtuse</div>
