--- a/src/main/resources/templates/users/view.html
+++ b/src/main/resources/templates/users/view.html
@@ -9,59 +9,110 @@
     <title th:text="${userModel.title}">查看用户</title>
 </head>
 
-<body>
-<div class="container">
-    <div class="row clearfix">
-        <div class="col-md-12 column">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>
-                        卡号
-                    </th>
-                    <th>
-                        姓名
-                    </th>
-                    <th>
-                        性别
-                    </th>
-                    <th>
-                        权限
-                    </th>
-                    <th>状态</th>
-                    <th>身份</th>
-                    <th>学院</th>
-                    <th>创建/修改时间</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr class="success">
-                    <td th:text="${userModel.user.cardid}"></td>
-                    <td th:text="${userModel.user.name}"></td>
-                    <td th:text="${userModel.user.sex}"></td>
-                    <td th:text="${userModel.user.permission}"></td>
-                    <td th:text="${userModel.user.status}"></td>
-                    <td th:text="${userModel.user.identity}"></td>
-                    <td th:text="${userModel.user.department}"></td>
-                    <td th:text="${userModel.user.time}"></td>
-                </tr>
-                </tbody>
-            </table>
-            <div class="row clearfix">
-                <div class="col-md-6 column">
-                    <button type="button" th:href="@{'/users/delete/'+${userModel.user.cardid}}" class="btn btn-default btn-block active btn-info">删除</button>
+<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+
+<div class="content-wrapper">
+    <div class="container-fluid">
+        <!-- Breadcrumbs-->
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+                <a href="#">流水管理</a>
+            </li>
+            <li class="breadcrumb-item active">信息查询</li>
+        </ol>
+        <!-- Example DataTables Card-->
+        <div class="card mb-3">
+            <div class="card-header">
+                <i class="fa fa-table"></i> Data Table Example</div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered text-center"  id="dataTable1" width="100%" cellspacing="0">
+                        <thead>
+                        <tr class="text-center">
+                            <th>卡号</th>
+                            <th>姓名</th>
+                            <th>性别</th>
+                            <th>权限</th>
+                            <th>状态</th>
+                            <th>身份</th>
+                            <th>学院</th>
+                            <th>创建/修改时间</th>
+                            <th>操作</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr class="success">
+                            <td th:text="${userModel.user.cardid}"></td>
+                            <td th:text="${userModel.user.name}"></td>
+                            <div th:if="${userModel.user.sex} eq 1">
+                                <td>男</td>
+                            </div>
+                            <div th:if="${userModel.user.sex} eq 2">
+                                <td>女</td>
+                            </div>
+                            <td th:text="${userModel.user.permission}"></td>
+                            <td th:text="${userModel.user.status}"></td>
+                            <td th:text="${userModel.user.identity}"></td>
+                            <td th:text="${userModel.user.department}"></td>
+                            <td th:text="${userModel.user.time}"></td>
+                            <td><a th:href="@{'/users/delete/'+${userModel.user.cardid}}">删除</a>
+                                <a th:href="@{'/users/modify/'+${userModel.user.cardid}}">修改</a></td>
+                        </tr>
+                    </table>
                 </div>
-                <div class="col-md-6 column">
-                    <button type="button"  class="btn btn-default btn-block active btn-info"><a th:href="@{'/users/modify/'+${userModel.user.cardid}}">修改</button>
+            </div>
+            <div class="card-footer small text-muted" th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy HH:mm')}" >版权保留xjtuse</div>
+        </div>
+    </div>
+    <!-- /.container-fluid-->
+    <!-- /.content-wrapper-->
+    <footer class="sticky-footer">
+        <div class="container">
+            <div class="text-center">
+            </div>
+        </div>
+    </footer>
+    <!-- Scroll to Top Button-->
+    <a class="scroll-to-top rounded" href="#page-top">
+        <i class="fa fa-angle-up"></i>
+    </a>
+    <!-- Logout Modal-->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                    <a class="btn btn-primary" href="login.html">Logout</a>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Bootstrap core JavaScript-->
+    <script src="../module/vendor/jquery/jquery.min.js"></script>
+    <script src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Core plugin JavaScript-->
+    <script src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- Page level plugin JavaScript-->
+    <script src="../module/vendor/chart.js/Chart.min.js"></script>
+    <script src="../module/vendor/datatables/jquery.dataTables.js"></script>
+    <script src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
+    <!-- Custom scripts for all pages-->
+    <script src="../module/js/sb-admin.min.js"></script>
+    <!-- Custom scripts for this page-->
+    <script src="../module/js/sb-admin-datatables.min.js"></script>
+    <script src="../module/js/sb-admin-charts.min.js"></script>
 </div>
+
 <!--<div th:replace="~{fragments/header :: header}"></div>-->
 <div>
-    <a th:href="@{'/users/delete/'+${userModel.user.cardid}}">删除</a>
-    <a th:href="@{'/users/modify/'+${userModel.user.cardid}}">修改</a>
+
 </div>
 <!--<div th:replace="~{fragments/footer :: footer}"></div>-->
 
