--- a/src/main/resources/templates/users/form.html
+++ b/src/main/resources/templates/users/form.html
@@ -273,7 +273,7 @@
                             <label for="cardid">
                                 账号：
                             </label>
-                            <input disabled="disabled" type="text" id="cardid" name="cardid" th:value="*{cardid}" class="form-control">
+                            <input  readonly="readonly" type="text" id="cardid" name="cardid" th:value="*{cardid}" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="name">
