--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,9 +7,11 @@
     <title>登陆页面</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="../css/util.css"/>
-    <link rel="stylesheet" type="text/css" href="../css/main.css"/>
+    <!--<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>-->
+    <link rel="stylesheet" type="text/css" href="css/util.css"/>
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+
+    <link href="https://cdn.bootcss.com/font-awesome/5.8.1/css/fontawesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +19,7 @@
     <div class="container-login100">
         <div class="wrap-login100">
             <div class="login100-pic js-tilt" data-tilt>
-                <img src="../images/img-01.png" alt="IMG">
+                <img src="./images/img-01.png" alt="IMG">
             </div>
 
             <form class="login100-form validate-form" th:action="@{/login}" method="post">
