--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -25,7 +25,7 @@
         <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
                 <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#second">
-                    <i class="fa fa-fw fa-dashboard"></i>
+                    <i class="fa fa-fw fa-facebook"></i>
                     <span class="nav-link-text">系统权限管理</span>
                 </a>
 
@@ -38,7 +38,7 @@
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
                 <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents1">
-                    <i class="fa fa-fw fa-area-chart"></i>
+                    <i class="fa fa-fw fa-car"></i>
                     <span class="nav-link-text">门禁设置管理</span>
                 </a>
                 <ul class="sidenav-second-level collapse" id="collapseComponents1">
@@ -54,7 +54,7 @@
             </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
                 <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents2">
-                    <i class="fa fa-fw fa-table"></i>
+                    <i class="fa fa-fw fa-user"></i>
                     <span class="nav-link-text">白名单管理</span>
                 </a>
 
