--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,8 +8,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css"/>-->
-    <link rel="stylesheet" type="text/css" href="css/util.css"/>
-    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/util.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/main.css"/>
 
     <link href="https://cdn.bootcss.com/font-awesome/5.8.1/css/fontawesome.min.css" rel="stylesheet">
 </head>
@@ -26,17 +26,12 @@
 				<span class="login100-form-title">
 					系统登陆
 				</span>
-                <span>
-                    <div class=" col-md-5" th:if="${loginError}">
-                        <p class="error" th:text="${errorMsg}" ></p>
-                    </div>
-                </span>
 
                 <div class="wrap-input100 validate-input">
                     <input class="input100" type="text" name="username" placeholder="账号">
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
-						<i class="fa fa-envelope" aria-hidden="true"></i>
+						<i class="fa fa-user" aria-hidden="true"></i>
 					</span>
                 </div>
 
@@ -46,6 +41,9 @@
                     <span class="symbol-input100">
 						<i class="fa fa-lock" aria-hidden="true"></i>
 					</span>
+                </div>
+                <div class="wrap-input100 validate-input" th:if="${loginError}">
+                    <p class="error"  style="color: red;: " th:text="${errorMsg}" ></p>
                 </div>
 
                 <div class="container-login100-form-btn">
