--- a/src/main/resources/templates/users/add.html
+++ b/src/main/resources/templates/users/add.html
@@ -23,7 +23,7 @@
             <li class="breadcrumb-item">
                 <a href="#">流水管理</a>
             </li>
-            <li class="breadcrumb-item active">信息查询</li>
+            <li class="breadcrumb-item active">添加用户</li>
         </ol>
         <!-- Example DataTables Card-->
         <div class="card mb-3">
