--- a/src/main/resources/templates/users/form.html
+++ b/src/main/resources/templates/users/form.html
@@ -61,13 +61,11 @@
                             <label for="sex">
                                 性别：
                             </label>
-                            <div th:if="*{sex} eq 1">
-                                <input type="text" id="sex" name="sex" value="1" class="form-control">
-                            </div>
-                            <div th:if="*{sex} eq 2">
-                                <input type="text" id="sex" name="sex" value="2" class="form-control">
-                            </div>
-
+                                <!--<input type="text" id="sex" name="sex" value="1" class="form-control">-->
+                                <select id="sex" name="sex">
+                                    <option name="sex"  value="1" th:selected="*{sex} eq 1">男</option>
+                                    <option name="sex" value="2" th:selected="*{sex} eq 2">女</option>
+                                </select>
                         </div>
                         <div class="form-group">
                             <input type="submit" value="提交" class="btn btn-primary">
