--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -34,15 +34,12 @@
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="#">流水管理</a>
+                <a href="#">人员管理</a>
             </li>
             <li class="breadcrumb-item active">信息查询</li>
         </ol>
         <!-- Example DataTables Card-->
         <div class="card mb-3">
-            <div class="card-header">
-                <i class="fa fa-table"></i> Data Table Example</div>
-            <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-bordered text-center"  id="dataTable" width="100%" cellspacing="0">
                         <thead>
