--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -60,7 +60,7 @@
 
                 <ul class="sidenav-second-level collapse" id="collapseComponents2">
                     <li>
-                        <a href="navbar.html">Navbar</a>
+                        <a href="./whitelist/list.html" th:href="@{~/whitelist/list}">白名单查询</a>
                     </li>
                     <li>
                         <a href="cards.html">Cards</a>
