--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -27,8 +27,7 @@
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
 
-<div th:include="mainframe :: common">
-</div>
+<div th:include="mainframe :: common"></div>
 <div class="content-wrapper">
     <div class="container-fluid">
         <!-- Breadcrumbs-->
