--- a/src/main/resources/templates/whitelist/list.html
+++ b/src/main/resources/templates/whitelist/list.html
@@ -3,18 +3,18 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
-    <!-- Bootstrap core CSS-->
-    <link href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom fonts for this template-->
-    <link href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!-- Page level plugin CSS-->
-    <link href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
-    <!-- Custom styles for this template-->
-    <link href="../module/css/sb-admin.css" rel="stylesheet">
+    <link  href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet">
+    <link th:href="@{~/module/vendor/bootstrap/css/bootstrap.min.css}" href="../module/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{~/module/vendor/font-awesome/css/font-awesome.min.css}" href="../module/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link th:href="@{~/module/vendor/datatables/dataTables.bootstrap4.css}" href="../module/vendor/datatables/dataTables.bootstrap4.css" rel="stylesheet">
+    <link th:href="@{~/module/css/sb-admin.css}" href="../module/css/sb-admin.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>白名单管理</title>
 </head>
-<body>
+<body class="fixed-nav sticky-footer bg-dark" id="page-top">
+
+<div th:include="mainframe :: common"></div>
+
 <div class="content-wrapper">
     <div class="container-fluid">
         <!-- Breadcrumbs-->
@@ -22,12 +22,10 @@
             <li class="breadcrumb-item">
                 <a href="#">白名单管理</a>
             </li>
-            <li class="breadcrumb-item active">信息查询</li>
+            <li class="breadcrumb-item active">白名单查询</li>
         </ol>
         <!-- Example DataTables Card-->
         <div class="card mb-3">
-            <div class="card-header">
-                <i class="fa fa-table"></i> Data Table Example</div>
             <div class="card-body">
                 <div class="table-responsive">
                     <table class="table table-bordered text-center" id="dataTable" width="100%" cellspacing="0">
@@ -50,14 +48,7 @@
                             <td>2019-5-28</td>
                             <td>1</td>
                         </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>3118311062</td>
-                            <td>软件学院</td>
-                            <td>2019-4-28</td>
-                            <td>2019-5-28</td>
-                            <td>1</td>
-                        </tr>
+
 
                         </tbody>
                     </table>
