--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -67,9 +67,6 @@
 
                         </tbody>
                     </table>
-                    <div>
-                        <a class="btn btn-primary" href="/users/form.html" th:href="@{/users/form}">添加用户</a>
-                    </div>
                 </div>
             </div>
             <div class="card-footer small text-muted" th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy HH:mm')}" >版权保留xjtuse</div>
@@ -104,19 +101,15 @@
         </div>
     </div>
     <!-- Bootstrap core JavaScript-->
-    <script src="../module/vendor/jquery/jquery.min.js"></script>
-    <script src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Core plugin JavaScript-->
-    <script src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Page level plugin JavaScript-->
-    <script src="../module/vendor/chart.js/Chart.min.js"></script>
-    <script src="../module/vendor/datatables/jquery.dataTables.js"></script>
-    <script src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
-    <!-- Custom scripts for all pages-->
-    <script src="../module/js/sb-admin.min.js"></script>
-    <!-- Custom scripts for this page-->
-    <script src="../module/js/sb-admin-datatables.min.js"></script>
-    <script src="../module/js/sb-admin-charts.min.js"></script>
+    <script th:src="@{~/module/vendor/jquery/jquery.min.js}" src="../module/vendor/jquery/jquery.min.js"></script>
+    <script th:src="@{~/module/vendor/bootstrap/js/bootstrap.bundle.min.js}" src="../module/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script th:src="@{~/module/vendor/jquery-easing/jquery.easing.min.js}" src="../module/vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script th:src="@{~/module/vendor/chart.js/Chart.min.js}" src="../module/vendor/chart.js/Chart.min.js"></script>
+    <script th:src="@{~/module/vendor/datatables/jquery.dataTables.js}" src="../module/vendor/datatables/jquery.dataTables.js"></script>
+    <script th:src="@{~/module/vendor/datatables/dataTables.bootstrap4.js}" src="../module/vendor/datatables/dataTables.bootstrap4.js"></script>
+    <script th:src="@{~/module/js/sb-admin.min.js}" src="../module/js/sb-admin.min.js"></script>
+    <script th:src="@{~/module/js/sb-admin-datatables.min.js}" src="../module/js/sb-admin-datatables.min.js"></script>
+    <script th:src="@{~/module/js/sb-admin-charts.min.js}" src="../module/js/sb-admin-charts.min.js"></script>
 </div>
 </body>
 
