白名单添加

--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -63,7 +63,7 @@
                         <a href="./whitelist/list.html" th:href="@{~/whitelist/list}">白名单查询</a>
                     </li>
                     <li>
-                        <a href="./whitelist/add.html">白名单添加</a>
+                        <a href="./whitelist/add.html" th:href="@{~/whitelist/add}">白名单添加</a>
                     </li>
                 </ul>
             </li>
