locate edit.html

--- a/src/main/resources/templates/mainframe.html
+++ b/src/main/resources/templates/mainframe.html
@@ -43,10 +43,7 @@
                 </a>
                 <ul class="sidenav-second-level collapse" id="collapseComponents1">
                     <li>
-                        <a href="navbar.html">Navbar</a>
-                    </li>
-                    <li>
-                        <a href="cards.html">Cards</a>
+                        <a href="./locate/edit.html" th:href="@{~/locate/edit}">工作区设置</a>
                     </li>
                 </ul>
 
